Removed Android support library use by replacing elements with compatible elements from the core libraries. Fixed some issues with polls.